factory design pattern completed