@@ -4,7 +4,6 @@ import com.astronaut.scheduleorganizer.exception.InvalidTimeFormatException;
 import com.astronaut.scheduleorganizer.exception.TaskConflictException;
 import com.astronaut.scheduleorganizer.exception.TaskNotFoundException;
 import com.astronaut.scheduleorganizer.model.Task;
-import com.astronaut.scheduleorganizer.model.TaskRequest;
 import com.astronaut.scheduleorganizer.observer.Observer;
 import com.astronaut.scheduleorganizer.observer.ObserverManager;
 
@@ -19,15 +18,15 @@ public class ScheduleManager {
     private final List<Task> taskList;
     private final ObserverManager observerManager;
 
-    private ScheduleManager(){
+    private ScheduleManager() {
         taskList = new ArrayList<>();
         observerManager = new ObserverManager();
     }
 
-    public static ScheduleManager getInstance(){
-        if(instance == null){
-            synchronized (ScheduleManager.class){
-                if(instance == null){
+    public static ScheduleManager getInstance() {
+        if (instance == null) {
+            synchronized (ScheduleManager.class) {
+                if (instance == null) {
                     instance = new ScheduleManager();
                 }
             }
@@ -35,32 +34,40 @@ public class ScheduleManager {
         return instance;
     }
 
-    public void addTask(Task task) throws TaskConflictException , InvalidTimeFormatException {
-        if(task.getStartTime().isAfter(task.getEndTime())) {
+    public void addTask(Task task) throws TaskConflictException, InvalidTimeFormatException {
+        if (task.getStartTime().isAfter(task.getEndTime())) {
             throw new InvalidTimeFormatException("Error: Invalid time format");
         }
         for (Task existingTask : taskList) {
             if (isTimeConflict(existingTask, task)) {
-                observerManager.notifyObservers(existingTask,task);
+                observerManager.notifyObservers(existingTask, task);
                 throw new TaskConflictException("Error: Task conflicts with existing task " + existingTask.getDescription());
             }
         }
-    taskList.add(task);
-    taskList.sort(Comparator.comparing(Task::getStartTime));
+        taskList.add(task);
+        System.out.println("Task added successfully. No conflicts");
     }
 
-    public void editTask(TaskRequest taskRequest) throws TaskNotFoundException {
+    public void editTask(Task taskRequest) throws TaskNotFoundException, TaskConflictException {
         Task oldTask = taskList.stream()
-                .filter(task -> task.getDescription().equals(taskRequest.getOldDescription()))
+                .filter(task -> task.getDescription().equals(taskRequest.getDescription()))
                 .findFirst()
                 .orElseThrow(() -> new TaskNotFoundException("Task not found"));
-        oldTask.setDescription(taskRequest.getNewDescription());
-        oldTask.setStartTime(LocalTime.parse(taskRequest.getNewStartTime()));
-        oldTask.setEndTime(LocalTime.parse(taskRequest.getNewEndTime()));
-        oldTask.setPriority(taskRequest.getNewPriority());
-    }
+        taskList.remove(oldTask);
+        oldTask.setStartTime(taskRequest.getStartTime());
+        oldTask.setEndTime(taskRequest.getEndTime());
+        oldTask.setPriority(taskRequest.getPriority());
+        oldTask.setDescription(taskRequest.getDescription());
+        for (Task existingTask : taskList) {
+            if (isTimeConflict(existingTask,oldTask)) {
+                observerManager.notifyObservers(existingTask, oldTask);
+                throw new TaskConflictException("Error: Task conflicts with existing task " + existingTask.getDescription());
+            }
+        }
 
-    public void markTaskAsCompleted(String description) throws TaskNotFoundException{
+        taskList.add(oldTask);
+    }
+    public void markTaskAsCompleted(String description) throws TaskNotFoundException {
         Task oldTask = taskList.stream()
                 .filter(task -> task.getDescription().equals(description))
                 .findFirst()
@@ -69,7 +76,7 @@ public class ScheduleManager {
         System.out.println(description + " " + "completed");
     }
 
-    public List<String> getTasksByPriority(String priority){
+    public List<String> getTasksByPriority(String priority) {
         return taskList.stream()
                 .filter(task -> task.getPriority().equalsIgnoreCase(priority))
                 .map(Task::getDescription)
@@ -80,29 +87,30 @@ public class ScheduleManager {
         return taskList.stream()
                 .filter(Task::isCompleted)
                 .map(Task::getDescription)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void removeTask(String description) throws TaskNotFoundException {
-       Task oldTask = taskList.stream()
+        Task oldTask = taskList.stream()
                 .filter(task -> task.getDescription().equals(description))
                 .findFirst()
                 .orElseThrow(() -> new TaskNotFoundException("Task not found"));
-       taskList.remove(oldTask);
-
+        System.out.println("Task removed successfully");
+        taskList.remove(oldTask);
     }
 
-    public List<String> getTasks(){
+    public List<String> getTasks() {
+        taskList.sort(Comparator.comparing(Task::getStartTime));
         return taskList.stream()
-                .map(Task::getDescription)
+                .map(task -> task.getStartTime() + " - " + task.getEndTime() + ": " + task.getDescription() + " [" + task.getPriority() + "]")
                 .collect(Collectors.toList());
     }
 
-    public void addObserver(Observer observer){
+    public void addObserver(Observer observer) {
         observerManager.addObserver(observer);
     }
 
-    public void removeObserver(Observer observer){
+    public void removeObserver(Observer observer) {
         observerManager.removeObserver(observer);
     }
 
